--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,11 @@ body {
 }
 
 .top {
-    padding-top: 23px;
-    padding-bottom: 25px;
+  padding-top: 23px;
+  padding-bottom: 25px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  
 }
 
 #head {
@@ -30,18 +29,16 @@ body {
   padding: 0;
   background: #e5e5e5;
   border: 0.5px solid #d1d5db;
- 
-  
 }
 
 form {
-    display: flex;
+  display: flex;
 }
 
 .form select {
   padding: 9px 37px 9px 13px;
- width: 312px;
-height: 42px;
+  width: 312px;
+  height: 42px;
   background: #ffffff;
   border: 1px solid #d1d5db;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
@@ -64,5 +61,45 @@ height: 42px;
   border: 1px solid #d1d5db;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 4px;
-  
+}
+
+.color-blocks-container {
+  display: flex;
+}
+.color-block p {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 24px;
+  text-align: center;
+  color: #2b283a;
+  text-transform: uppercase;
+}
+
+.one,
+.two,
+.three,
+.four,
+.five {
+  width: 110px;
+  height: 414px;
+}
+
+.one {
+  background: #f55a5a;
+}
+
+.two {
+  background: #2b283a;
+}
+
+.three {
+  background: #fbf3ab;
+}
+
+.four {
+  background: #aad1b6;
+}
+
+.five {
+  background: #a626d3;
 }
