--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,14 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  box-sizing: border-box;
-  background-color: lightgray;
+  list-style: none;
+  line-height: 1.5;
+  /* color: #ffffff; */
+  color: black;
+  font-family: 'Inter', sans-serif;
 }
 
-.container {
-  width: 550px;
-  height: 550px;
-  background: #ffffff;
-  margin: auto;
-}
-
-.top {
-  padding-top: 23px;
-  padding-bottom: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-#head {
-  width: 61px;
-  height: 42px;
-  border: 0.5px solid #313131;
-  padding: 0;
-  background: #e5e5e5;
-  border: 0.5px solid #d1d5db;
-}
-
-form {
-  display: flex;
-}
-
-.form select {
-  padding: 9px 37px 9px 13px;
-  width: 312px;
-  height: 42px;
-  background: #ffffff;
-  border: 1px solid #d1d5db;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-  border-radius: 6px;
-  font: inherit;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: #111827;
-  margin-right: 13px;
-}
-.form input {
-  font: inherit;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 16px;
-  color: #374151;
-  padding: 12px 11px;
-  background: #ffffff;
-  border: 1px solid #d1d5db;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-  border-radius: 4px;
-}
-
-.color-blocks-container {
-  display: flex;
-}
-.color-block p {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 24px;
-  text-align: center;
-  color: #2b283a;
-  text-transform: uppercase;
-}
-
-.one,
-.two,
-.three,
-.four,
-.five {
-  width: 110px;
-  height: 414px;
-}
-
-.one {
-  background: #f55a5a;
-}
-
-.two {
-  background: #2b283a;
-}
-
-.three {
-  background: #fbf3ab;
-}
-
-.four {
-  background: #aad1b6;
-}
-
-.five {
-  background: #a626d3;
+html {
+  font-size: 62.5%;
 }
